[package]
name = "booru-counter-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["tracing"] }
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["fs", "tracing"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
